[project]
name = "bd-docs"
version = "0.1.0"
description = "Generate structured documentation and AI insights for bd (beads) commands"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
bd-docs = "bd_docs.main:main"
bd-harvest = "bd_docs.harvest:main"
bd-insights = "bd_docs.insights:main"
bd-summarise = "bd_docs.summarise:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bd_docs"]
